# videomeg-browser

./: LICENSE  README.md  pyproject.toml
scripts/: open_audio_file.py  run_audio_browser_demo.py  run_audio_sync_demo.py  run_hyperscanning_demo.py  run_multiple_raw_video_sync_demo.py  run_sync_demo.py  run_sync_demo_with_sample_data.py  run_two_video_sync_demo.py  run_video_audio_sync_demo.py  run_video_audio_sync_demo_2.py  run_video_browser_demo.py  run_video_sync_demo.py  run_video_sync_demo_2.py
src/videomeg_browser/: __init__.py  audio.py  audio_browser.py  audio_player.py  browser.py  browser_synchronizer.py  comp_tstamps.py  fakes.py  gui_utils.py  mne_connector.py  prototype_qtgraph.py  raw_browser_manager.py  raw_media_aligner.py  raw_video_aligner.py  raw_video_sync.py  syncable_browser.py  syncable_media_browser.py  synced_raw_media_browser.py  synced_raw_video_browser.py  test_utils.py  time_index_mapper.py  time_selector.py  video.py  video_browser.py
src/videomeg_browser/browsers/: __init__.py  audio_browser.py  gui_utils.py  syncable_browser.py  video_browser.py
src/videomeg_browser/media/: __init__.py  audio.py  helsinki_videomeg_file_utils.py
tests/: test_raw_video_aligner.py  test_video.py  test_video_browser.py
