[project]
name = "videomeg-browser"
version = "0.1.0"
description = "Browse video data recorded with video-MEG system"
readme = "README.md"
authors = [
    { name = "Teemu Taivainen", email = "teemu.taivainen@hotmail.fi" }
]
requires-python = ">=3.10"
dependencies = ["mne"]

[project.optional-dependencies]
dev = [
  "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["A", "B006", "D", "E", "F", "I", "UP", "UP031", "W"]
ignore = [
  "D100",  # Missing docstring in public module
  "D104",  # Missing docstring in public package
  "D413",  # Missing blank line after last section
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = [
  "mne.utils.copy_doc",
  "mne.utils.copy_function_doc_to_method_doc",
  "mne.utils.deprecated",
  "property",
  "setter",
]